--- a/gradeCalculatorPage.html
+++ b/gradeCalculatorPage.html
@@ -114,7 +114,7 @@
       <div id="feedback">Great job! You're doing your best to perform above average.</div>
     </div>
     <br>
-    <a href="about.html">Go to About page</a>
+    <a href="index.html">Go to About page</a>
   </div>
 
   <script>
