--- a/gradeCalculatorPage.html
+++ b/gradeCalculatorPage.html
@@ -26,9 +26,21 @@
       margin-bottom: 20px;
       color: yellow;
     }
+    .image-box {
+      background: rgba(255, 255, 255, 0.5);
+      padding: 15px;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+    .image-box img {
+      width: 100%;
+      max-width: 500px;
+      border-radius: 10px;
+    }
     .subject {
       display: flex;
       gap: 10px;
+      margin-top: 15px;
       margin-bottom: 10px;
       flex-wrap: wrap;
     }
@@ -64,7 +76,6 @@
       margin-top: 20px;
       display: inline-block;
     }
-
     #result-box {
       margin-top: 20px;
       background: rgba(255, 255, 255, 0.5);
@@ -94,6 +105,9 @@
 <body>
   <div class="container">
     <h2>Shali Grade Calculator</h2>
+    <div class="image-box">
+      <img src="https://img.sanishtech.com/u/d60156614bf835fee4c2d4d5a515f877.jpg" alt="My Logo">
+    </div>
     <div class="subject">
       <input type="text" class="subjectInput" placeholder="Subject Name">
       <input type="number" class="numberInput" placeholder="Score" max="100" min="0">
