--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div class="container">
     <h2>About Shali Grade Calculator</h2>
     <div class="image-box">
-      <img src="https://img.sanishtech.com/u/d60156614bf835fee4c2d4d5a515f877.jpg" alt="My Logo">
+      <img src="myLogo.jpeg" alt="My Logo">
     </div>
     <p>I've designed this grade calculator to help students see where they are in terms of academics and 
       improve their scores based on the internationally accepted GPA (Grade Point Average) range. 
