--- a/gradeCalculatorPage.html
+++ b/gradeCalculatorPage.html
@@ -106,7 +106,7 @@
   <div class="container">
     <h2>Shali Grade Calculator</h2>
     <div class="image-box">
-      <img src="https://img.sanishtech.com/u/d60156614bf835fee4c2d4d5a515f877.jpg" alt="My Logo">
+      <img src="myLogo.jpeg" alt="My Logo">
     </div>
     <div class="subject">
       <input type="text" class="subjectInput" placeholder="Subject Name">
